--- a/p4api/package.json
+++ b/p4api/package.json
@@ -3,7 +3,9 @@
   "description": "Simple Perforce API",
   "keywords": [
     "perforce",
-    "p4"
+    "p4",
+    "node",
+    "js"
   ],
   "version": "2.0.0",
   "author": {
