--- a/p4api/package.json
+++ b/p4api/package.json
@@ -17,12 +17,17 @@
     "index.js"
   ],
   "dependencies": {
-    "q":">=1.4.1",
-    "lodash":">=4.16.4"
+    "bluebird": "^3.4.6",
+    "lodash": ">=4.16.4",
+    "q": ">=1.4.1"
   },
   "main": ".",
   "repository": {
     "type": "git",
     "url": "https://github.com/Pisamad/p4api.git"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2",
+    "should": "^11.1.1"
   }
 }
