--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "p4api",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Simple Perforce API",
-  "main": "lib/library.js",
+  "main": "lib/p4api.js",
   "scripts": {
     "build": "webpack --env dev && webpack --env build && npm run test",
     "dev": "webpack --progress --colors --watch --env dev",
