--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
-    "lodash": "^4.17.4",
+    "lodash": ">=4.17.11",
     "shelljs": "^0.8.2"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^4.13.1",
     "eslint-loader": "^1.9.0",
     "mocha": "^4.0.1",
