--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,13 @@
 {
   "compact": true,
   "presets": [
-    "env"
+    "@babel/preset-env"
   ],
   "plugins": [
-    "babel-plugin-add-module-exports",
-    "transform-async-to-generator",
-    "transform-runtime"
+    ["@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
   ]
 }
