--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lib"
   ],
   "scripts": {
-    "build": "webpack --env dev && webpack --env build && npm run test",
-    "dev": "webpack --progress --colors --watch --env dev",
-    "test":       "mocha --timeout 0 --require @babel/register --colors ./test/*.spec.js",
+    "build": "webpack --env.build && npm run test",
+    "dev": "webpack --progress --colors --watch --env.dev",
+    "test": "mocha --timeout 0 --require @babel/register --colors    ./test/*.spec.js",
     "test:watch": "mocha --timeout 0 --require @babel/register --colors -w ./test/*.spec.js"
   },
   "repository": {
@@ -28,31 +28,34 @@
     "url": "https://github.com/Pisamad/p4api/issues"
   },
   "dependencies": {
-    "acorn": "^6.2.1",
-    "bluebird": "^3.5.5",
+    "acorn": "^7.1.0",
+    "bluebird": "^3.7.1",
     "lodash": "^4.17.15",
+    "py-marshal": "^1.0.2",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "babel-eslint": "^10.0.2",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/register": "^7.7.0",
+    "@babel/runtime": "^7.7.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-loader": "^2.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.6.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^6.2.0",
-    "webpack": "^3.10.0",
-    "yargs": "^13.3.0"
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^6.2.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "yargs": "^14.2.0"
   }
 }
